Added HttpSession interface for server-side state in the webadmin Added minimal cookie support and a Stateful SessionBean to use for sessions Moved the DefaultHttpBean and the new Stateful SessionBean into the server package and gave them their own *ejb-jar.xml files.
git-svn-id: https://svn.apache.org/repos/asf/incubator/openejb/trunk/openejb0@444510 13f79535-47bb-0310-9956-ffa450edef68